# ai-exploration

./: .env.example  .gitignore  README.md
.claude/: settings.json  settings.local.json
demo1-phoenix-rag/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
demo1-phoenix-rag/app/: config.py  evaluators.py  ingest.py  main.py  rag_pipeline.py  retriever.py
demo1-phoenix-rag/data/docs/: capital_gains_tax_2024.txt  retirement_accounts_2024.txt  standard_deduction_2024.txt  tax_brackets_2024.txt  w2_income_deductions_2024.txt
demo1-phoenix-rag/notebooks/: 01_ingest_and_embed.ipynb  02_rag_evaluations.ipynb  03_datasets_and_experiments.ipynb
demo1-phoenix-rag/scripts/: ollama_pull.sh
demo2-mlflow-gateway/: .env.example  Dockerfile  Dockerfile.gateway  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
demo2-mlflow-gateway/app/: config.py  demo_routes.py  rag_eval.py
demo2-mlflow-gateway/gateway/: config.yaml
demo2-mlflow-gateway/notebooks/: 01_gateway_demo.ipynb  02_rag_evaluation.ipynb
demo2-mlflow-gateway/scripts/: ollama_pull.sh  seed_gateway.py
